--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
     "username": "root",
-    "password": "iGetInt0pc.com!",
-    "database": "trowey",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "password": "8uApjHu7HoN0hp7A9rUp",
+    "database": "railway",
+    "host": "containers-us-west-19.railway.app",
+    "dialect": "mysql",
+    "port" : 7366
   },
   "test": {
     "username": "root",
@@ -15,9 +16,10 @@
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "password": "8uApjHu7HoN0hp7A9rUp",
+    "database": "railway",
+    "host": "containers-us-west-19.railway.app",
+    "dialect": "mysql",
+    "port" : 7366
   }
 }
