--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.25.5",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "twilio": "^3.83.1"
   }
 }
